--- a/Chart.yaml
+++ b/Chart.yaml
@@ -20,6 +20,10 @@ dependencies:
   name: grafana
   repository: https://grafana.github.io/helm-charts
   version: 6.43.*
+- condition: blackboxExporter.enabled
+  name: prometheus-blackbox-exporter
+  repository: 7.1.*
+  version: https://prometheus-community.github.io/helm-charts
 description: kube-prometheus-stack collects Kubernetes manifests, Grafana dashboards,
   and Prometheus rules combined with documentation and scripts to provide easy to
   operate end-to-end Kubernetes cluster monitoring with Prometheus using the Prometheus
